<resources>
    <string name="app_name">ToDoApp</string>
    <string name="slogan">Planeje o que você irá fazer para ser mais organizado hoje, amanhã e além</string>
    <string name="login">Login</string>
    <string name="signup">Cadastre-se</string>
    <string name="email_hint">email</string>
    <string name="password_hint">senha</string>
    <string name="forgotPassword">Esqueceu sua senha?</string>
    <string name="orWithText">ou com</string>
    <string name="dont_have_account">Não possui uma conta? <b>Cadastre-se</b></string>
    <string name="have_account">Possui uma conta? <b>Conecte-se</b></string>
    <string name="register">Cadastrar</string>
    <string name="password_confirm_hint">confirmar senha</string>
    <string name="home">home</string>
    <string name="taskslist">tasks list</string>
    <string name="graphs">graphs</string>
    <string name="taskfolder">task folder</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">criar</string>
    <string name="hello_message">Olá, %1$s</string>
    <string name="hello_desc">Vamos fazer o dia mais produtivo</string>
    <string name="my_task">Minhas Tarefas</string>
    <string name="completedTask">Completas</string>
    <string name="randomNumber">16 Tarefas</string>
    <string name="pendingTask">Pendentes</string>
    <string name="ongoingTask">Em Progresso</string>
    <string name="canceledTask">Canceladas</string>
    <string name="today_task">Tarefas de Hoje</string>
    <string name="view_all">Ver todas</string>
    <string name="task_name_placeholder">Lavar as roupas</string>
    <string name="task_time_placeholder">07:00 - 07:15</string>
    <string name="tag_placeholder">Work</string>
    <string name="search_task_hint">procure por uma tarefa</string>
    <string name="task">Tarefas</string>
    <string name="datePlaceHolder">10 set 2023</string>
    <string name="time_placeholder">06:00</string>
    <string name="create_folder">Criar Pasta</string>
    <string name="settings">Configurações</string>
    <string name="logout">Sair</string>
    <string name="name_placeholder">Nome Usuario</string>
    <string name="email_placeholder">usuario@gmail.com</string>
    <string name="folder_placeholder">Completas</string>
    <string name="folder_date_placeholder">Jan 2023</string>
    <string name="folder_date">14 Mar 2013</string>
    <string name="filter_sort_tag">Classificar por etiqueta</string>
    <string name="filter_sort_folder">Classificar por pasta</string>
    <string name="cancel">Cancelar</string>
    <string name="filter">Filtrar</string>
    <string name="create_task">Criar Tarefa</string>
    <string name="title">Título</string>
    <string name="date">Data</string>
    <string name="timePickerPlaceholder">07:00</string>
    <string name="priority">Prioridade</string>
    <string name="add_tag">+ criar uma tag</string>
    <string name="hour_and_date">Data e horário</string>
    <string name="create">Criar</string>
    <string name="your_task">minha tarefa...</string>
    <string name="new_tag">Nova Tag</string>
    <string name="your_tag">minha tag...</string>

    <string name="empty_field">Campo não pode estar vazio</string>
    <string name="invalid_email">Formato de email inválido</string>
    <string name="email_in_use">Email já cadastrado</string>
    <string name="password_not_match">Senhas não conferem</string>
    <string name="password_short_length">Senha deve conter 8 caracteres ou mais</string>
    <string name="incorrect_info">Dados incorretos</string>
    <string name="no_tasks_to_show">Você não possuí tarefas para este dia!</string>
    <string name="name_hint">nome</string>
    <string name="name_short_error">Nome não pode ser menor que 3 caracteres</string>
    <string name="no_tags_info">Você não possui tags, crie uma</string>
    
    <string name="task_create_successfully">Tarefa adicionada</string>
    <string name="task_create_error">Ocorreu um erro ao adicionar tarefa</string>
    <string name="restore">Restaurar</string>
    <string name="delete">Deletar</string>
    <string name="edit">Editar</string>
    <string name="start">Começar</string>
    <string name="complete">Completar</string>
    <string name="new_folder">Nova pasta</string>
    <string name="folder_name">casa, trabalho, privado...</string>
    <string name="folder">Pasta</string>

    <string name="delete_folder">Deletar pasta %1$s</string>
    <string name="keep_folder">Manter pasta</string>
    <string name="yes_delete_folder">Deletar pasta</string>

    <string name="delete_folder_warning">Deseja realmente deletar esta pasta? Todas as tarefas associadas serão deletadas.</string>

    <string name="urgent_portuguese">Urgente</string>
    <string name="high_priority_portuguese">Alta Prioridade</string>
    <string name="medium_priority_portuguese">Média Prioridade</string>
    <string name="low_priority_portuguese">Baixa Prioridade</string>
    <string name="select">Selecionar</string>
</resources>