<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/homeTodayTaskText"
        style="@style/TextViewBlueSubTitle"
        android:layout_marginBottom="16dp"
        android:text="@string/today_task"
        app:layout_constraintBottom_toTopOf="@id/homeNestedScroll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_marginTop="8dp"
        android:id="@+id/homeViewAllText"
        style="@style/TextViewBlueNormal"
        android:text="@string/view_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/homeNoTaskDisplayText"
        style="@style/TextViewBlueNormal"
        android:text="@string/no_tasks_to_show"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/homeTodayTaskText"
        app:layout_constraintTop_toBottomOf="@id/homeTodayTaskText" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/homeNestedScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/homeTodayTaskText">

        <androidx.recyclerview.widget.RecyclerView
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:itemCount="3"
            tools:listitem="@layout/item_task_wide" />


    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>