<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/filterSortTagText"
        style="@style/TextViewBlueNormal"
        android:text="@string/filter_sort_tag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/filterTagRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/filterSortTagText"
        tools:itemCount="3"
        tools:listitem="@layout/item_tag" />

    <TextView
        android:id="@+id/filterSortFolderText"
        style="@style/TextViewBlueNormal"
        android:layout_marginTop="16dp"
        android:text="@string/filter_sort_folder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filterTagRV" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/filterFolderRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/filterSortFolderText"
        tools:itemCount="3"
        tools:listitem="@layout/item_tag_wide" />

    <LinearLayout
        android:id="@+id/filterButtonsLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filterFolderRV">

        <TextView
            android:textColor="@color/purple_primary"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/background_filter_button"
            android:textSize="14sp"
            android:layout_marginEnd="8dp"
            android:id="@+id/filterCancelButton"
            android:layout_width="91dp"
            android:layout_height="34dp"
            android:text="@string/cancel" />

        <TextView
            android:backgroundTint="@color/purple_primary"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/background_filter_button"
            android:textSize="14sp"
            android:id="@+id/filterYesButton"
            android:layout_width="91dp"
            android:layout_height="34dp"
            android:text="@string/filter" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>