<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/main_padding"
    tools:context=".home.HomeFragment"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/homeWelcomeText"
        style="@style/TextViewBlueTitle"
        android:text="@string/hello_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/homeSloganText"
        style="@style/TextViewBlueNormal"
        android:text="@string/hello_desc"
        android:textColor="@color/gray_dark"
        app:layout_constraintBottom_toTopOf="@id/homeMyTaskText"
        app:layout_constraintStart_toStartOf="@id/homeWelcomeText"
        app:layout_constraintTop_toBottomOf="@id/homeWelcomeText" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:src="@drawable/ic_person"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="@id/homeSloganText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/homeWelcomeText" />

    <TextView
        android:id="@+id/homeMyTaskText"
        style="@style/TextViewBlueSubTitle"
        android:text="@string/my_task"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/homeSloganText" />

    <include
        android:id="@+id/homeCompleteContainer"
        layout="@layout/container_completed_tasks"
        app:layout_constraintEnd_toStartOf="@id/homePendingContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/homeMyTaskText" />

    <include
        app:layout_constraintStart_toEndOf="@id/homeCompleteContainer"
        android:id="@+id/homePendingContainer"
        layout="@layout/container_pending_tasks"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/homeMyTaskText" />


</androidx.constraintlayout.widget.ConstraintLayout>