<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemCL"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/background_item_today_task"
    android:minWidth="100dp"
    android:padding="12dp">

    <View
        android:id="@+id/itemTodayTaskLine"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:background="@drawable/background_line"
        app:layout_constraintBottom_toBottomOf="@id/itemFolderName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/itemTodayTaskName" />

    <TextView
        android:id="@+id/itemTodayTaskName"
        style="@style/TextViewBlueNormal"
        android:layout_marginHorizontal="8dp"
        android:text="@string/task_name_placeholder"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/itemTodayTaskLine"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemTodayTaskTime"
        style="@style/TextViewBlueNormal"
        android:text="@string/task_time_placeholder"
        android:textColor="@color/gray_dark"
        app:layout_constraintStart_toStartOf="@id/itemTodayTaskName"
        app:layout_constraintTop_toBottomOf="@id/itemTodayTaskName" />

    <TextView
        android:id="@+id/itemFolderName"
        style="@style/TextViewBlueNormal"
        android:drawablePadding="2dp"
        android:gravity="center"
        android:text="@string/folder"
        android:textColor="@color/gray_dark"
        app:drawableStartCompat="@drawable/ic_folder_small"
        app:drawableTint="@color/gray_dark"
        app:layout_constraintEnd_toStartOf="@+id/itemTodayTaskTag"
        app:layout_constraintStart_toStartOf="@id/itemTodayTaskTime"
        app:layout_constraintTop_toBottomOf="@id/itemTodayTaskTime" />

    <ImageView
        android:id="@+id/itemTodayTaskTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_priority"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/itemFolderName"
        app:layout_constraintTop_toBottomOf="@id/itemTodayTaskTime" />

</androidx.constraintlayout.widget.ConstraintLayout>